<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.SQLDateBaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onInsert"
            android:text="@string/insert" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onInsertAll"
            android:text="批量插入" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onQueryAll"
            android:text="@string/queryAll" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onQueryBySql"
            android:text="@string/queryBySql" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onQueryById"
            android:text="@string/queryById" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUpdate"
            android:text="@string/update" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDelete"
            android:text="@string/delete" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="httpEngine"
            android:text="@string/httpEngine" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:onClick="cacheData"
            android:text="@string/dataInfoCache" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|left"
            android:paddingStart="12dp"
            android:paddingBottom="12dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>