<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.IocActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ioc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ioc"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_isNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isNet"
        app:layout_constraintTop_toBottomOf="@id/btn_ioc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crash"
        app:layout_constraintTop_toBottomOf="@id/btn_isNet" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ioc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_crash" />

</androidx.constraintlayout.widget.ConstraintLayout>